# cpp-course

./: .gitignore  cpp-course.code-workspace
01-hello-world/: CMakeLists.txt  hello-world.cc
02-types/: CMakeLists.txt  auto_01.cc  auto_02.cc  decltype_01.cc  decltype_02.cc  types.cc  value_cat.cc
03-pointers/: 01-pointers.cc  02-void-pointer.cc  03-nullptr.cc  04-pointers-const.cc
04-references/: 01-references.cc  02-rvalue-reference.cc  03-modern-swap.cc
05-user-types/: 01-struct.cc  02-struct-as-class.cc  03-struct-as-array.cc  04-struct-fields.cc  05-better-arrays.cc  06-without-unions.cc  07-with-unions.cc  08-misusing-unions.cc  09-controlling-unions.cc  09-controlling-unions.h  10-enum.cc  11-enum-operators.cc
06-statements/: 01-range-for.cc
07-free-store/: 01-new-delete.cc  02-manager-object.cc
08-desk-calculator/: CMakeLists.txt  desk-calculator.cc
09-lambda/: 01-using-function-pointers.cc  02-using-lambda.cc  03-using-lambda.cc  CMakeLists.txt
10-constexpr-functions/: 01-inline-fun.cc  02-constexpr-fun.cc
11-function-arguments/: 01-variadic-template.cc  02-initializer-list.cc  03-ellipsis.cc  04-default-arguments.cc  05-overloaded-functions.cc
12-catch-up/: 01-catch-up.cc  02-without-structured-binding.cc  03-with-structured-binding.cc
13-exceptions/: 01-execeptions.cc  02-resource-management.cc  03-finally.cc  04-noexcept.cc  05-function-try-block.cc  06-assertions.cc
14-vector/: 01-vector-v1.cc  02-vector-v1.cc  03-vector-v1.cc  04-vector-v2.cc  vector-v1.h  vector-v2.h
19-string/: 01-string-v1.cc  01-string-v1.h  CMakeLists.txt
(+82 files in other folders)
